# audio-filter

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
demo-conf/: chorus.conf  delay.conf  lowpass.conf  multi.conf  pitch.conf
demo-out/: .gitignore
src/: .gitignore  anypass.cpp  chorus.cpp  delay.cpp  effects.hpp  fft_wrapper.cpp  fft_wrapper.hpp  filter_make.cpp  io.cpp  io.hpp  main.cpp  pitch_shift.cpp  window.cpp  window.hpp
